# kumate-app

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  cronjob.yaml  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
src-tauri/: Cargo.toml  kumate.key  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: check.rs  cluster_role_bindings.rs  cluster_roles.rs  common.rs  config_maps.rs  configmaps.rs  connections.rs  contexts.rs  crd_definitions.rs  cron_jobs.rs  cronjobs.rs  custom_resources.rs  daemon_sets.rs  daemonsets.rs  deployments.rs  endpoints.rs  events.rs  helm.rs  horizontal_pod_autoscalers.rs  ingress_classes.rs  ingresses.rs  jobs.rs  leases.rs  limit_ranges.rs  limitranges.rs  mod.rs  mutating_webhooks.rs  namespaces.rs  network_policies.rs  nodes.rs  persistent_volume_claims.rs  persistent_volumes.rs  pod_disruption_budgets.rs  pods.rs  port_forward.rs  priority_classes.rs  replica_sets.rs  replicasets.rs  replication_controllers.rs  replicationcontrollers.rs  (+13 more)
src-tauri/src/constants/: app.rs  helm_repos.rs  mod.rs  watch.rs
src-tauri/src/databases/: k8s_contexts.rs  mod.rs
src-tauri/src/k8s/: client.rs  common.rs  config_maps.rs  contexts.rs  cron_jobs.rs  cronjobs.rs  daemon_sets.rs  daemonsets.rs  deployments.rs  horizontal_pod_autoscalers.rs  jobs.rs  limit_ranges.rs  mod.rs  namespaces.rs  nodes.rs  pod_disruption_budgets.rs  pods.rs  replica_sets.rs  secrets.rs  (+6 more)
(+573 files in other folders)
