[package]
name = "kumate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kumate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
rand = "0.8"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
base64 = "0.22"
serde_yaml = "0.9"
kube = { version = "2", default-features = false, features = ["client", "config", "rustls-tls"] }
k8s-openapi = { version = "0.26", features = ["v1_34"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
futures-util = "0.3"
ring = "0.17.14"
tokio-stream = "0.1.17"
sled = "0.34"
bincode = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
